--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.18.0",
+    "eslint-plugin-tailwindcss": "^3.17.5",
+    "eslint-plugin-vue": "^9.32.0",
+    "globals": "^15.14.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
+    "typescript-eslint": "^8.19.1",
     "vitepress": "^1.5.0"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs --host",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "lint": "eslint docs",
+    "lint:debug": "eslint docs --debug",
+    "lint:fix": "eslint docs --fix"
   }
 }
