--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-
-/dist
-dist
-docs/.vitepress/cache
+# vscode extensions
 .history
+
+# Vitepress
+docs/.vitepress/cache
+
+# Auto-imports
+docs/components.d.ts
+docs/auto-imports.d.ts
+.eslintrc-auto-import.json
 
 # Nuxt dev/build outputs
 .output
@@ -10,6 +15,7 @@ docs/.vitepress/cache
 .nuxt
 .nitro
 .cache
+/dist
 dist
 
 # Node dependencies
