--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "typescript-eslint": "^8.19.1",
+    "unplugin-auto-import": "^19.0.0",
+    "unplugin-vue-components": "^28.0.0",
     "vitepress": "^1.5.0"
   },
   "scripts": {
