--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "lint:fix": "eslint docs --fix"
   },
   "dependencies": {
-    "@formkit/tempo": "^0.1.2"
+    "@formkit/tempo": "^0.1.2",
+    "@types/node": "^22.10.5",
+    "sitemap": "^8.0.0"
   }
 }
